[package]
name = "second_order_ode"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/second_order_ode_rust"
repository = "https://github.com/phillyfan1138/second_order_ode_rust"
readme="README.md"
license = "MIT"
description = "A library for solving second order ODEs."

[dependencies]


[dev-dependencies]
approx = "0.2.0"


[badges]
travis-ci = { repository = "phillyfan1138/second_order_ode_rust" }